--- a/Figma to Real Website Responsive/style.css
+++ b/Figma to Real Website Responsive/style.css
@@ -6,3 +6,85 @@
     --light-blue-color: #6f7dfb;
     
 }
+
+*,
+*::before,
+*::after{
+    box-sizing: border-box;
+}
+
+body{
+    margin: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.wrapper{
+    max-width: 1134px;
+    margin: 0 auto;
+}
+
+.btn{
+    padding: 16px 32px;
+    border-radius: 24px;
+    color: #fff;
+    display: inline-block;
+    font-weight: bold;
+    font-size: 20px;
+    position: relative;
+}
+
+.btn.dark{
+    background-color: var(--dark-blue-color);
+}
+
+.btn.light{
+    background-color: var(--organge-color);
+}
+
+.btn.enrol-icon::before{
+    content: url('images/icons8-edit-48.png');
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+}
+
+.btn.enrol-icon{
+    padding-left: 65px;
+    padding-right: 15px;
+}
+
+header{
+    background: linear-gradient(180deg, #6f7dfb 0%, #26308c 100%);
+    height: 100vh;
+    width: 100%;
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav .logo{
+    font-weight: 900;
+    font-size: 40px;
+    color: #fff;
+}
+
+nav ul{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 60px; 
+    list-style: none;
+    margin: 0;
+}
+
+nav ul li a{
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 24px;
+    text-decoration: none;
+    color: #fff;
+}
