--- a/Figma to Real Website Responsive/style.css
+++ b/Figma to Real Website Responsive/style.css
@@ -196,3 +196,113 @@ nav ul li a{
     left: 5px;
     z-index: 1;
 }
+
+/* Testimonials Section */
+section{
+    margin-top: 100px;
+}
+
+h2{
+    font-weight: 900;
+    font-size: 60px;
+    line-height: 120%;
+    margin: 0;
+    color: var(--dark-blue-color);
+}
+
+h2.light{
+    color: #ffffff;
+}
+
+section p{
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 200%;
+    color: var(--dark-blue-color);
+}
+
+.testimonials-section{
+    display: flex;
+    gap: 100px;
+    align-items: center;
+}
+
+.testimonials-section .mobile-btn{
+    display: none;
+}
+
+.testimonials-section .testimonials-card{
+    width: 442px;
+    background: #ffffff;
+    box-shadow: 0px 9px 36px rgba(0,0,0,0.2);
+    border-radius: 24px;
+    margin-bottom: 50px;
+    position: relative;
+}
+
+.testimonials-section .testimonials-card::before{
+    content: "";
+    width: 28px;
+    position: absolute;
+    height: 40px;
+    top: -40px;
+    left: 60px;
+    background: var(--dark-blue-color);
+    border-radius: 24px 24px 0 0;
+}
+
+.testimonials-section .testimonials-card:last-child::before{
+    left: 40px;   
+    top: -50px;
+    border-radius: 0 0 24px 24px;
+    height: calc(100% + 90px);
+    z-index: -1;
+}
+
+.testimonials-section .testimonials-card .content{
+    font-weight: 900;
+    font-size: 18px;
+    line-height: 150%;
+    color: #ffffff;
+    border-radius: 24px;
+    padding: 24px 32px;
+    background: var(--light-blue-color);
+}
+
+.testimonials-section .testimonials-card:last-child .content{
+    background: var(--organge-color);
+}
+
+.testimonials-section .testimonials-card .info h4{
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 120%;
+    margin: 0;
+    color: var(--dark-blue-color);
+}
+
+.testimonials-section .testimonials-card .info{
+    padding: 24px 32px;
+    background: #ffffff;
+}
+
+.testimonials-section .testimonials-card .info p.company{
+    color: var(--dark-blue-color);
+}
+
+.testimonials-section .testimonials-card img{
+    border-radius: 50%;
+    height: 120px;
+    width: 120px;
+    position: absolute;
+    right: 32px;
+    bottom: 20px;
+}
+
+.testimonials-section .testimonials-card:last-child{
+    transform: translateX(20px);
+}
+
+.testimonials-section .features{
+    margin-bottom: 30px;
+}
