--- a/Figma to Real Website Responsive/style.css
+++ b/Figma to Real Website Responsive/style.css
@@ -43,10 +43,10 @@ body{
 }
 
 .btn.enrol-icon::before{
-    content: url('images/icons8-edit-48.png');
+    content: url('images/icons8-edit-16.png');
     position: absolute;
     top: 50%;
-    left: 10px;
+    left: 35px;
     transform: translateY(-50%);
 }
 
@@ -60,6 +60,7 @@ header{
     height: 100vh;
     width: 100%;
 }
+
 
 /* Navbar Properties */
 
@@ -95,6 +96,7 @@ nav ul li a{
     text-decoration: none;
     color: #ffffff;
 }
+
 
 /* Hero Section */
 
@@ -197,7 +199,9 @@ nav ul li a{
     z-index: 1;
 }
 
+
 /* Testimonials Section */
+
 section{
     margin-top: 100px;
 }
@@ -233,7 +237,7 @@ section p{
 
 .testimonials-section .testimonials-card{
     width: 442px;
-    background: #ffffff;
+    background: var(--light-color);
     box-shadow: 0px 9px 36px rgba(0,0,0,0.2);
     border-radius: 24px;
     margin-bottom: 50px;
@@ -263,7 +267,7 @@ section p{
     font-weight: 900;
     font-size: 18px;
     line-height: 150%;
-    color: #ffffff;
+    color: var(--light-color);
     border-radius: 24px;
     padding: 24px 32px;
     background: var(--light-blue-color);
@@ -283,7 +287,7 @@ section p{
 
 .testimonials-section .testimonials-card .info{
     padding: 24px 32px;
-    background: #ffffff;
+    background: var(--light-color);;
 }
 
 .testimonials-section .testimonials-card .info p.company{
@@ -305,4 +309,203 @@ section p{
 
 .testimonials-section .features{
     margin-bottom: 30px;
+}
+
+
+/* Courses Section */
+
+.courses-section{
+    background: linear-gradient(180deg, #6f7dfb 0%, #26308c 100%);
+    padding: 70px 0;
+    padding-bottom: 120px;
+}
+
+.courses-section h2{
+    text-align: center;
+}
+
+.courses-section .course-cards{
+    display: flex;
+    gap: 70px;
+}
+
+.courses-section .course-cards img{
+    height: 275px;
+    width: 100%;
+    filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.25));
+    border-radius: 24px;
+}
+
+.courses-section .course-card{
+    background: var(--light-color);
+    border-radius: 24px;
+    padding: 0px 32px;
+    margin: 40px 0;
+    width: 100%;
+    position: relative;
+}
+
+.courses-section .course-card::after{
+    content:"";
+    height: 8px;
+    right: 32px;
+    left: 32px;
+    bottom: 0;
+    background: var(--dark-blue-color);
+    border-radius: 24px;
+    position: absolute;
+}
+
+.courses-section .course-card h3{
+    font-weight: 900;
+    font-size: 30px;
+    line-height: 100%;
+    color: var(--dark-blue-color);
+}
+
+.courses-section .course-card .info{
+    display: flex;
+    gap: 16px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.courses-section .course-card .duration{
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 100%;
+    white-space: nowrap;
+    color: var(--dark-blue-color);
+    position: relative;
+    padding-left: 50px;
+}
+
+.courses-section .course-card .duration::before{
+    content: url(images/icons8-clock-50.png);
+    position: absolute;
+    top: -8px;
+    left: -6px;
+}
+
+.courses-section .wrapper{
+    position: relative;
+}
+
+.courses-section .wrapper .btn{
+    position: absolute;
+    right: 0;
+}
+
+
+/* App Section */
+
+.app-section{
+    text-align: center;
+}
+
+.app-section .app-buttons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    margin-top: 24px;
+    cursor: pointer;
+}
+
+.app-section .app-btn{
+    padding: 16px 25px;
+    background: #000000;
+    color: var(--light-color);
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    min-width: 310px;
+    border-radius: 5px;
+}
+
+.app-section .app-btn span{
+    font-weight: normal;
+    font-size: 20px;
+    text-align: center;
+    color: white;
+}
+
+
+/* Footer Section */
+
+footer{
+    background: var(--dark-color);
+    color: var(--light-color);
+    margin-top: 100px;
+    padding: 70px 0;
+}
+
+footer a{
+    color: var(--light-color);
+    text-decoration: none;
+}
+
+footer h3{
+    color: var(--organge-color);
+    padding-left: 20px;
+}
+
+footer ul li{
+    list-style: none;
+    margin: 16px 0;
+}
+
+footer .links-container{
+    display: grid;
+    grid-template-columns: 2fr 2fr 3fr;
+}
+
+footer .links-container .links:last-child ul li{
+    margin-left: -18px;
+}
+
+footer .social{
+    margin-left: 20px;
+}
+
+footer .social a{
+    margin-right: 15px;
+}
+
+footer form{
+    margin-left: 20px;
+    margin-top: 16px;
+    position: relative;
+}
+
+footer form input{
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 200%;
+    border-radius: 8px;
+    padding: 8px 32px;
+    border: none;
+    width: 100%;
+    color: #000000;
+
+}
+
+footer form .submit-btn{
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: var(--dark-blue-color);
+    border-radius: 8px;
+    padding: 8px 32px;
+    border: 0;
+    font-weight: normal;
+    font-size: 16px;
+    color: var(--light-color);
+    cursor: pointer;
+}
+
+footer .copywright{
+    margin-top: 30px;
+    margin-left: 345px;
 }
