--- a/Figma to Real Website Responsive/style.css
+++ b/Figma to Real Website Responsive/style.css
@@ -69,9 +69,19 @@ nav{
     justify-content: space-between;
     align-items: center;
     position: fixed;
-    width: 1134px;
-    top: 32px;
+    width: 1154px;
+    top: 0;
+    padding: 36px 0;
     z-index: 100;
+    transition: all 500ms ease;
+}
+
+nav.scrolled{
+    background: var(--dark-color);
+    box-shadow: 0 16px 14px -8px rgba(0, 0, 0, 0.3);
+    border-radius: 0 0 8px 8px;
+    top: 0;
+    padding: 12px;
 }
 
 nav .logo{
@@ -508,4 +518,77 @@ footer form .submit-btn{
 footer .copywright{
     margin-top: 30px;
     margin-left: 345px;
+}
+
+
+
+/* Responsive Design */
+
+@media(max-width:1100px){
+    .btn{
+        padding: 12px 32px;
+    }
+    
+    .wrapper{
+        padding: 0 100px;
+    }
+
+    nav{
+        width: 100%;
+        left: 0;
+        right: 0;
+        padding: 36px 100px;
+    }
+
+    nav.scrolled{
+        padding: 16px 100px;
+    }
+
+    header,
+    header .wrapper,
+    .hero-section{
+        max-height: 1100px;
+    }
+
+    .hero-section{
+        flex-direction: column;
+    }
+
+    .hero-section .left{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .hero-section .left h1{
+        font-size: 50px;
+        line-height: 125%;
+    }
+
+    .hero-section .right{
+        position: absolute;
+        bottom: 350px;
+    }
+
+    .hero-section .right img{
+        height: 620px;
+    }
+
+    .hero-section .achievement-card{
+        position: relative;
+        margin-bottom: 80px;
+    }
+
+    .achievement-card.achievement-card.students-enrolled,
+    .achievement-card.achievement-card.overall-rating{
+        left: unset;
+        top: unset;
+    }
+
+    .hero-section.achievement-cards{
+        align-self: flex-start;
+        margin: 40px;
+
+    }
 }
