--- a/Figma to Real Website Responsive/style.css
+++ b/Figma to Real Website Responsive/style.css
@@ -524,7 +524,7 @@ footer .copywright{
 
 /* Responsive Design */
 
-@media(max-width:1100px){
+@media(max-width:1100px) {
     .btn{
         padding: 12px 32px;
     }
@@ -561,6 +561,10 @@ footer .copywright{
         justify-content: center;
     }
 
+    .hero-section .left .btn{
+        align-self: flex-start;
+    }
+
     .hero-section .left h1{
         font-size: 50px;
         line-height: 125%;
@@ -568,11 +572,12 @@ footer .copywright{
 
     .hero-section .right{
         position: absolute;
-        bottom: 350px;
+        bottom: 250px;
     }
 
     .hero-section .right img{
-        height: 620px;
+        height: 720px;
+        width: 250px;
     }
 
     .hero-section .achievement-card{
@@ -582,13 +587,106 @@ footer .copywright{
 
     .achievement-card.achievement-card.students-enrolled,
     .achievement-card.achievement-card.overall-rating{
+        margin-right: 600px;
         left: unset;
         top: unset;
     }
 
     .hero-section.achievement-cards{
         align-self: flex-start;
-        margin: 40px;
-
+        margin: 50px;
     }
+
+    h2{
+        font-size: 40px;
+    }
+
+    .testimonials-section{
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    .testimonials-section .testimonials-card{
+        width: 100%;
+        margin-bottom: 40px;
+    }
+
+    .testimonials-section .testimonials-card:last-child::before{
+        top: -40px;
+        left: 60px;
+        height: calc(100% + 80px);
+    }
+
+    .testimonials-section .testimonials-card:last-child{
+        transform: translateX(0px);
+        margin-bottom: 0;
+    }
+
+    .testimonials-section .desktop-btn{
+        display: none;
+    }
+
+    .testimonials-section .mobile-btn{
+        display: block;
+        align-self: flex-end;
+        order: 3;
+    }
+
+    .testimonials-section .right{
+        order: 1;
+    }
+
+    .testimonials-section .left{
+        order: 2;
+    }
+
+    .testimonials-section .right p{
+        display: inline;
+    }
+
+    .testimonials-section h2{
+        margin-bottom: 20px;
+    }
+
+    .courses-section .course-cards{
+        flex-direction: column;
+    }
+
+    .courses-section .course-card{
+        margin: 0;
+    }
+
+    .courses-section h2{
+        margin-bottom: 40px;
+    }
+
+    .courses-section .course-card img{
+        height: 260px;
+        object-fit: cover;
+    }
+
+    .courses-section .course-card h3{
+        font-size: 24px;   
+    }
+
+    .courses-section .wrapper .btn{
+        right: 100px;
+    }
+
+    .courses-section .course-card:last-child{
+        margin-bottom: 50px;
+    }
+
+    footer .links-container{
+        grid-template-columns: 1fr 1fr;
+    }
+
+    footer .links-container .links:last-child{
+        grid-column: 1 / 3;
+    }
+
+}
+
+@media(max-width: 800px) {
+    
 }
