--- a/ECommerce Website HTML CSS JS/style.css
+++ b/ECommerce Website HTML CSS JS/style.css
@@ -9,6 +9,8 @@ body{
     width: 100%;
 }
 
+/* Home Page */
+
 /* Header Start */
 #header{
     display: flex;
@@ -17,6 +19,10 @@ body{
     padding: 20px 80px;
     background: #e3e6f3;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+    z-index: 999;
+    position: sticky;
+    top: 0;
+    left: 0;
 }
 
 #navbar{
@@ -28,6 +34,7 @@ body{
 #navbar li{
     list-style: none;
     padding: 0 20px;
+    position: relative;
 }
 
 #navbar li a{
@@ -38,6 +45,62 @@ body{
     transition: 0.3s ease;
 }
 
-#navbar li a:hover{
+#navbar li a:hover,
+#navbar li a.active{
     color: #088178;
+}
+
+#navbar li a.active::after,
+#navbar li a:hover::after{
+    content: "";
+    width: 30%;
+    height: 2px;
+    background: #088178;
+    position: absolute;
+    bottom: -4px;
+    left: 20px;
+}
+
+/* Hero Section */
+
+#hero{
+    background-image: url("images/hero4.png");
+    height: 90vh;
+    width: 100%;
+    background-size: cover;
+    background-position: top 25% right 0;
+    padding: 0 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+#hero h4{
+    padding-bottom: 15px;
+    font-size: 25px;
+}
+
+#hero h2{
+    font-size: 45px;
+    font-weight: bold;
+}
+
+#hero h1{
+    font-size: 60px;
+    font-weight: bold;
+    color: #088178;
+}
+
+#hero button{
+    background-image: url("images/button.png");
+    background-color: transparent;
+    color: #088178;
+    border: 0;
+    padding: 14px 65px 14px 65px;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 15px;
+
 }
