--- a/ECommerce Website HTML CSS JS/style.css
+++ b/ECommerce Website HTML CSS JS/style.css
@@ -9,6 +9,22 @@ body{
     width: 100%;
 }
 
+h2{
+    font-size: 46px;
+    line-height: 54px;
+    color: #222;
+}
+
+h4{
+    font-size: 20px;
+    color: #222;
+}
+
+h6{
+    font-weight: 700;
+    font-size: 12px;
+}
+
 p{
     font-size: 16px;
     color: #465b52;
@@ -21,6 +37,19 @@ p{
 
 .section-m1{
     margin: 40px 0;
+}
+
+button.normal{
+    font-size: 14px;
+    font-weight: 700;
+    padding: 15px 13px;
+    color: black;
+    background-color: white;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    transition: 0.3s ease;
 }
 
 /* Home Page */
@@ -91,7 +120,7 @@ p{
     justify-content: center;
 }
 
-#hero h4{
+/* #hero h4{
     padding-bottom: 15px;
     font-size: 25px;
 }
@@ -99,7 +128,7 @@ p{
 #hero h2{
     font-size: 45px;
     font-weight: bold;
-}
+} */
 
 #hero h1{
     font-size: 60px;
@@ -174,7 +203,7 @@ p{
 }
 
 
-/* Feature Section */
+/* Feature Product Section */
 #product1 h2{
     font-size: 45px;
     font-weight: bold;
@@ -193,7 +222,7 @@ p{
     box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
     margin: 15px 0;
     transition: 0.2s ease;
-    
+    position: relative;
 }
 
 #product1 .pro:hover{
@@ -224,4 +253,67 @@ p{
 #product1 .pro .des i{
     font-size: 12px;
     color: rgb(243, 181, 25);
+}
+
+#product1 .pro .des h4{
+    padding-top: 7px;
+    font-size: 15px;
+    font-weight: 700;
+    color: #088178;
+}
+
+#product1 .pro .cart{
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 50px;
+    background-color: #e8f6ea;
+    font-weight: 500;
+    color: #088178;
+    border: 1px solid #cce7d0;
+    position: absolute;
+    bottom: 20px;
+    right: 10px;
+}
+
+#product1 .pro-container{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    flex-wrap: wrap;
+}
+
+
+/* Banner Section */
+
+#banner{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-image: url("images/banner/b2.jpg");
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    background-position: center;
+}
+
+#banner h4{
+    color: #fff;
+    font-size: 16px;
+}
+
+#banner h2{
+    color: #fff;
+    font-size: 32px;
+    padding: 10px 0;
+}
+
+#banner h2 span{
+    color: #ef3636;
+}
+
+#banner button:hover{
+    background: #088178;
+    color: #fff;
 }
