--- a/ECommerce Website HTML CSS JS/style.css
+++ b/ECommerce Website HTML CSS JS/style.css
@@ -42,12 +42,24 @@ p{
 button.normal{
     font-size: 14px;
     font-weight: 700;
-    padding: 15px 13px;
+    padding: 15px 30px;
     color: black;
     background-color: white;
     border-radius: 4px;
     cursor: pointer;
     border: none;
+    outline: none;
+    transition: 0.3s ease;
+}
+
+button.white{
+    font-size: 13px;
+    font-weight: 700;
+    padding: 11px 18px;
+    color: #fff;
+    background-color: transparent;
+    cursor: pointer;
+    border: 1px solid #fff;
     outline: none;
     transition: 0.3s ease;
 }
@@ -288,9 +300,10 @@ button.normal{
 
 #banner{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    text-align: center;
     background-image: url("images/banner/b2.jpg");
     width: 100%;
     height: 40vh;
@@ -316,4 +329,54 @@ button.normal{
 #banner button:hover{
     background: #088178;
     color: #fff;
+}
+
+
+/* SM Banner Section */
+
+#sm-banner{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-evenly;
+}
+
+#sm-banner .banner-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-image: url("images/banner/b17.jpg");
+    min-width: 580px;
+    height: 50vh;
+    background-size: cover;
+    background-position: center;
+    padding: 30px;
+}
+
+#sm-banner .banner-box2{
+    background-image: url("images/banner/b10.jpg");
+}
+
+#sm-banner .banner-box h4{
+    color: #fff;
+    font-size: 20px;
+    font-weight: 300;
+}
+
+#sm-banner .banner-box h2{
+    color: #fff;
+    font-size: 28px;
+    font-weight: 800;
+}
+
+#sm-banner .banner-box span{
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    padding: 15px;
+}
+
+#sm-banner .banner-box:hover button{
+    background-color: #088178;
+    border: 1px solid #088178;
 }
