--- a/ECommerce Website HTML CSS JS/style.css
+++ b/ECommerce Website HTML CSS JS/style.css
@@ -454,25 +454,98 @@ button.white{
     color: #ffdb27;
 }
 
+#newsletter .form{
+    display: flex;
+    align-items: center;
+    width: 40%;
+    /* gap: 8px; */
+}
+
 #newsletter input{
-    height: 2.9rem;
+    height: 2.8rem;
     padding: 0 1.25em;
     font-size: 14px;
     width: 100%;
     border: 1px solid transparent;
     border-radius: 4px;
     outline: none;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
 }
 
 #newsletter button{
     background-color: #088178;
     color: #fff;
     white-space: nowrap;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
 }
 
-#newsletter .form{
+
+/* Footer Section */
+footer{
     display: flex;
-    align-items: center;
-    width: 40%;
-    gap: 8px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+footer .col{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
+
+footer .logo{
+    margin-bottom: 30px;
+}
+
+footer h4{
+    font-size: 20px;
+    padding-bottom: 20px;
+}
+
+footer p{
+    font-size: 18px;
+    margin: 0 0 8px 0;
+}
+
+footer a{
+    font-size: 15px;
+    text-decoration: none;
+    color: #222;
+    margin-bottom: 10px;
+}
+
+footer a:hover{
+    color: #088178;
+}
+
+footer .follow{
+    margin-top: 20px;
+}
+
+footer .follow i{
+    color: #465b52;
+    padding-right: 4px;
+    cursor: pointer;
+}
+
+footer .follow i:hover{
+    color: #088178;
+}
+
+footer .install .row img{
+    border: 1px solid #088178;
+    border-radius: 6px;
+}
+
+footer .install img{
+    margin: 10px 0 15px 0;
+    cursor: pointer;
+}
+
+footer .copywright{
+    width: 100%;
+    text-align: center;
 }
