--- a/ECommerce Website HTML CSS JS/style.css
+++ b/ECommerce Website HTML CSS JS/style.css
@@ -803,7 +803,15 @@ footer .copywright{
     margin-right: 10px;
 }
 
+#prodetails .single-pro-details input:focus{
+    outline: none;
+}
+
 #prodetails .single-pro-details button{
     background-color: #088178;
     color: #fff;
+}
+
+#prodetails .single-pro-details span{
+    line-height: 25px;
 }
