--- a/ECommerce Website HTML CSS JS/style.css
+++ b/ECommerce Website HTML CSS JS/style.css
@@ -252,6 +252,7 @@ button.white{
 #product1 .pro img{
     width: 100%;
     border-radius: 20px;
+    cursor: pointer;
 }
 
 #product1 .pro .des{
@@ -712,6 +713,21 @@ footer .copywright{
 
     footer .copywright{
         text-align: start;
+    }
+
+    /* Single Product CSS for sproduct.html page */
+    #prodetails {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #prodetails .single-pro-image {
+        width: 100%;
+        margin-right: 0px;
+    }
+
+    #prodetails .single-pro-details {
+        width: 100%;
     }
 }
 
