--- a/ECommerce Website HTML CSS JS/style.css
+++ b/ECommerce Website HTML CSS JS/style.css
@@ -664,7 +664,11 @@ footer .copywright{
     }
 }
 
-@media(max-width:477px){
+@media(max-width: 477px){
+    .section-p1{
+        padding: 20px;
+    }
+
     #header{
         padding: 10px 30px;
     }
@@ -715,6 +719,7 @@ footer .copywright{
         text-align: start;
     }
 
+
     /* Single Product CSS for sproduct.html page */
     #prodetails {
         display: flex;
@@ -729,6 +734,7 @@ footer .copywright{
     #prodetails .single-pro-details {
         width: 100%;
     }
+
 
     /* Blog Page CSS for Mobile Display */
     #blog{
@@ -745,6 +751,26 @@ footer .copywright{
         width: 100%;
         margin-right: 0;
         margin-bottom: 30px;
+    }
+
+
+    /* About Page CSS for Mobile Display */
+    #about-head{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #about-head img {
+        width: 78%;
+        margin-bottom: 20px;
+    }
+
+    #about-head div{
+        padding-left: 0px;
+    }
+
+    #about-app .video{
+        width: 100%;
     }
 }
 
@@ -918,4 +944,40 @@ footer .copywright{
     font-weight: 700;
     color: #c9cbce;
     z-index: -9;
+}
+
+
+/* About Page CSS */
+#page-header.about-header{
+    background-image: url("images/about/banner.png");
+}
+
+#about-head{
+    display: flex;
+    align-items: center;
+}
+
+#about-head img{
+    width: 50%;
+    height: 50%;
+}
+
+#about-head div{
+    padding-left: 40px;
+}
+
+#about-app{
+    text-align: center;
+}
+
+#about-app .video{
+    width: 70%;
+    height: 100%;
+    margin: 30px auto 0 auto;
+}
+
+#about-app .video video{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
 }
