--- a/ECommerce Website HTML CSS JS/style.css
+++ b/ECommerce Website HTML CSS JS/style.css
@@ -662,6 +662,16 @@ footer .copywright{
     #newsletter .form{
         width: 70%;
     }
+
+
+    /* Contact Page CSS for Ipad Display */
+    #form-details{
+        padding: 40px;
+    }
+
+    #form-details form{
+        width: 50%;
+    }
 }
 
 @media(max-width: 477px){
@@ -771,6 +781,32 @@ footer .copywright{
 
     #about-app .video{
         width: 100%;
+    }
+
+
+    /* Contact Page CSS for Mobile Display */
+    #contact-details {
+    flex-direction: column;
+    }
+
+    #contact-detials .details{
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    #contact-detials .map{
+        width: 100%;
+    }
+
+    #form-details{
+        margin: 10px;
+        padding: 30px 10px;
+        flex-wrap: wrap;
+    }
+
+    #form-details form{
+        width: 100%;
+        margin-bottom: 30px;
     }
 }
 
